Handle replay copy budget